[package]
name = "kgetall"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow = "1.0"
clap = { version = "4.1", features = ["derive"] }
fmtools = "0.1"
kube = "0.84"
k8s-openapi = { version = "0.18", features = ["v1_26"] }
termtree = "0.4"
# ptree = "0.4"
tokio = { version = "1.25", features = ["full"] }
