[package]
name = "kgetall"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow = "1.0"
clap = { version = "4.1", features = ["derive"] }
fmtools = "0.1"
kube = "0.85"
k8s-openapi = { version = "0.19", features = ["v1_27"] }
termtree = "0.4"
# ptree = "0.4"
tokio = { version = "1.25", features = ["full"] }
